--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
+
 {
   "dependencies": {
     "axios": "^1.7.3",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mathjs": "^13.0.3",
+    "type" : "module"
   },
   "devDependencies": {
     "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "type" : "module"
   }
 }
