--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "dependencies": {
     "axios": "^1.7.3",
     "express": "^4.19.2",
-    "mathjs": "^13.0.3",
-    "type" : "module"
+    "mathjs": "^13.0.3"
   },
   "devDependencies": {
     "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4",
-    "type" : "module"
+    "webpack-cli": "^5.1.4"
   }
 }
